# rust-game

./: .gitignore  Cargo.toml  README.md  README.md.bk  custom_map.json  gamemodes.md  map.sample  readme.md  rpg_rules.md  test_map.json
.github/workflows/: elixir.yml
client/: Cargo.toml  README.md  install_dependencies.sh
client/assets/: default_map.json  large_room_map.json
client/src/: assets.rs  bak_main.rs  filter.rs  game_state.rs  input.rs  lib.rs  main.rs  main.rs.bak  map.rs  net.rs  player.rs  ui.rs
client/src/engine/: assets.rs  event.rs  mod.rs  net.rs  render.rs
client/src/proc_anim_engine/: readme.md
protocol/: Cargo.toml
protocol/src/: client_to_server.rs  core.rs  lib.rs  server_to_client.rs  zones.rs
server/: Cargo.toml  README.md  mix.exs
server/lib/: acceptor.ex  player.ex  server.ex
server/lib/client/: authed.ex  client.ex  commands.ex
server/lib/db/: db.ex  db_api.ex
server/lib/gamemodes/: tag.ex
server/lib/gamemodes/rpg/: dice.ex  entity.ex  item.ex  rpg.ex
server/lib/server/: application.ex
server/lib/zones/: zone.ex  zone_manager.ex
server/src/: main.rs  routes.rs
server/test/: db_api_test.exs  rpg_dice.exs  server_test.exs
src/: main.rs
tools/map_editor/: README.md  map_editor.py  run_editor.sh
