[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
ggez = "0.9"
glam = "0.25"
image = "0.24"
log = "*"
simple_logger = "5.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# [dependencies.specs]
# version = "0.20"
# features = ["derive"]

[dependencies.protocol]
path = "../protocol"